5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1764_672.log
== SUBMITION (2019-05-21 16:58:41) 
-- CODE:
from numpy import*

N = array(eval(input([1,2,3,4,5,6]))
			 N = ones(6,dtype = int)
			 print(N)
-- EXECUTION TIME:
0.195774
-- ERROR:
  File "/home/codebench/codes/1764/672/main.py", line 4
    N = ones(6,dtype = int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:58:41) 
-- CODE:
from numpy import*

N = array(eval(input([1,2,3,4,5,6]))
			 N = ones(6,dtype = int)
			 print(N)
-- ERROR:
File "XXXX", line 4
    N = ones(6,dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:58:50) 
-- CODE:
from numpy import*

N = array(eval(input([1,2,3,4,5,6]))
			 N = ones(6,dtype = int)
print(N)
-- ERROR:
File "XXXX", line 4
    N = ones(6,dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:58:51) 
-- CODE:
from numpy import*

N = array(eval(input([1,2,3,4,5,6]))
			 N = ones(6,dtype = int)
print(N)
-- EXECUTION TIME:
0.234846
-- ERROR:
  File "/home/codebench/codes/1764/672/main.py", line 4
    N = ones(6,dtype = int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:58:52) 
-- CODE:
from numpy import*

N = array(eval(input([1,2,3,4,5,6]))
			 N = ones(6,dtype = int)
	print(N)
-- ERROR:
File "XXXX", line 4
    N = ones(6,dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:58:54) 
-- CODE:
from numpy import*

N = array(eval(input([1,2,3,4,5,6]))
			 N = ones(6,dtype = int)
	print(N)
-- EXECUTION TIME:
0.208266
-- ERROR:
  File "/home/codebench/codes/1764/672/main.py", line 4
    N = ones(6,dtype = int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 16:58:56) 
-- CODE:
from numpy import*

N = array(eval(input([1,2,3,4,5,6]))
			 N = ones(6,dtype = int)
		print(N)
-- EXECUTION TIME:
0.153852
-- ERROR:
  File "/home/codebench/codes/1764/672/main.py", line 4
    N = ones(6,dtype = int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:58:56) 
-- CODE:
from numpy import*

N = array(eval(input([1,2,3,4,5,6]))
			 N = ones(6,dtype = int)
		print(N)
-- ERROR:
File "XXXX", line 4
    N = ones(6,dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:58:58) 
-- CODE:
from numpy import*

N = array(eval(input([1,2,3,4,5,6]))
			 N = ones(6,dtype = int)
			print(N)
-- ERROR:
File "XXXX", line 4
    N = ones(6,dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:59:01) 
-- CODE:
from numpy import*

N = array(eval(input([1,2,3,4,5,6]))
			 N = ones(6,dtype = int)
				print(N)
-- ERROR:
File "XXXX", line 4
    N = ones(6,dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:00:12) 
-- CODE:
from numpy import*

N = array(input("posicoes:")

N = ones(6,dtype = int)

print(N)
-- ERROR:
File "XXXX", line 5
    N = ones(6,dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:01:22) 
-- CODE:
from numpy import*

N = int(input("posicoes:")

x = ones(N,dtype=int)

print(x)
-- EXECUTION TIME:
0.225843
-- ERROR:
  File "/home/codebench/codes/1764/672/main.py", line 5
    x = ones(N,dtype=int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:01:23) 
-- CODE:
from numpy import*

N = int(input("posicoes:")

x = ones(N,dtype=int)

print(x)
-- EXECUTION TIME:
0.21153
-- ERROR:
  File "/home/codebench/codes/1764/672/main.py", line 5
    x = ones(N,dtype=int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:01:24) 
-- CODE:
from numpy import*

N = int(input("posicoes:")

x = ones(N,dtype=int)

print(x)
-- ERROR:
File "XXXX", line 5
    x = ones(N,dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:01:34) 
-- CODE:
from numpy import*

N = int(input("posicoes:")

x = ones(N, dtype=int)

print(x)
-- ERROR:
File "XXXX", line 5
    x = ones(N, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:01:35) 
-- CODE:
from numpy import*

N = int(input("posicoes:")

x = ones(N, dtype=int)

print(x)
-- EXECUTION TIME:
0.210073
-- ERROR:
  File "/home/codebench/codes/1764/672/main.py", line 5
    x = ones(N, dtype=int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:01:57) 
-- CODE:
from numpy import*

n = int(input("posicoes:")

x = ones(n, dtype=int)

print(x)
-- ERROR:
File "XXXX", line 5
    x = ones(n, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:01:57) 
-- CODE:
from numpy import*

n = int(input("posicoes:")

x = ones(n, dtype=int)

print(x)
-- ERROR:
File "XXXX", line 5
    x = ones(n, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:01:58) 
-- CODE:
from numpy import*

n = int(input("posicoes:")

x = ones(n, dtype=int)

print(x)
-- EXECUTION TIME:
0.216856
-- ERROR:
  File "/home/codebench/codes/1764/672/main.py", line 5
    x = ones(n, dtype=int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:01:59) 
-- CODE:
from numpy import*

n = int(input("posicoes:")

x = ones(n, dtype=int)

print(x)
-- EXECUTION TIME:
0.170573
-- ERROR:
  File "/home/codebench/codes/1764/672/main.py", line 5
    x = ones(n, dtype=int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:01:59) 
-- CODE:
from numpy import*

n = int(input("posicoes:")

x = ones(n, dtype=int)

print(x)
-- ERROR:
File "XXXX", line 5
    x = ones(n, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:02:04) 
-- CODE:
from numpy import*

n = int(input("posicoes:")

n = ones(n, dtype=int)

print(x)
-- ERROR:
File "XXXX", line 5
    n = ones(n, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:02:05) 
-- CODE:
from numpy import*

n = int(input("posicoes:")

n = ones(n, dtype=int)

print(x)
-- EXECUTION TIME:
0.222161
-- ERROR:
  File "/home/codebench/codes/1764/672/main.py", line 5
    n = ones(n, dtype=int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:02:06) 
-- CODE:
from numpy import*

n = int(input("posicoes:")

n = ones(n, dtype=int)

print(x)
-- ERROR:
File "XXXX", line 5
    n = ones(n, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:02:54) 
-- CODE:
from numpy import*

n = int(input("posicoes:")

n = ones(n, dtype=int)

print(n)
-- ERROR:
File "XXXX", line 5
    n = ones(n, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:03:32) 
-- CODE:
from numpy import*

n = int(input("posicoes: ")

n = ones(n, dtype=int)

print(n)
-- ERROR:
File "XXXX", line 5
    n = ones(n, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:03:33) 
-- CODE:
from numpy import*

n = int(input("posicoes: ")

n = ones(n, dtype=int)

print(n)
-- ERROR:
File "XXXX", line 5
    n = ones(n, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:04:05) 
-- CODE:
from numpy import*

n = int(input("posicoes: ")

w = ones(n, dtype=int)

print(w)
-- ERROR:
File "XXXX", line 5
    w = ones(n, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:09:26) 
-- CODE:
from numpy import*

n = int(input("posicoes de n:"))

x = ones(n, dtype = int)
print(x)
-- EXECUTION TIME:
0.400551
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:09:27) 
-- CODE:
from numpy import*

n = int(input("posicoes de n:"))

x = ones(n, dtype = int)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:15:27) 
-- CODE:
from numpy import*

n = array(eval(input("posicoes de n:")))

x = ones(n, dtype = int)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:15:30) 
-- CODE:
from numpy import*

n = array(eval(input("posicoes de n:")))

x = ones(n, dtype = int)
print(x)
-- EXECUTION TIME:
0.589512
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:15:31) 
-- CODE:
from numpy import*

n = array(eval(input("posicoes de n:")))

x = ones(n, dtype = int)
print(x)
-- EXECUTION TIME:
0.475445
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
